# SE

./: .gitignore  .gitmodules  README.md
Demos/: Game.cs  README.md  SE.Demos.csproj  SEDemos.csproj  SEDemos.sln
Demos/Data/: Content.mgcb
Demos/Src/: SpriteBaseSerializer.cs  SpriteSerializer.cs
Editor/: EditorApp.cs  LICENSE  Program.cs  Publish.bat  README.md  SE.Editor.csproj  SE.Editor.sln  SEEditor.csproj  SEEditor.sln
Editor/Data/: Content.mgcb
Editor/Editor/: EditorComponent.cs  EditorFileIO.cs  Project.cs  ProjectTemplates.cs
Engine/: .editorconfig  CrashLogger.cs  EngineUtility.cs  GameEngine.cs  GameLoop.cs  IEditor.cs  InternalCamera.cs  LICENSE  LICENSES_LIBS  LoadingScreen.cs  README.md  Random.cs  Ref.cs  SE.csproj  SE.csproj.DotSettings  SE.sln
Engine/Core/: AssetManager.cs  Audio.cs  Config.cs  Console.cs  Extensions.cs  FileIO.cs  Lighting.cs  ModLoader.cs  NewParticleEngine.cs  ParticleEngine.cs  Physics.cs  Rendering.cs  SceneManager.cs  Screen.cs  SpatialPartitionManager.cs  Time.cs  UIManager.cs
Engine/Editor/: LevelEditor.cs
Engine/Properties/: launchSettings.json
Launcher/: .editorconfig  Game.cs  LICENSE  Program.cs  Publish.bat  SE.Launcher.csproj  SE.Launcher.sln  SELauncher.csproj  SELauncher.sln  libSE.Native.dylib
Launcher/Data/: InstancingShader.xnb  OBJECT  SE_CONFIG.json  testIni.ini  tinyfile.dds
Launcher/Properties/: launchSettings.json
Performance-Tests/: Collections.cs  EngineInstance.cs  LICENSE  Loops.cs  Program.cs  README.md  SEPerformanceTests.csproj  SEPerformanceTests.sln
SE.Native/: CMakeLists.txt  CMakeSettings.json  Particles.h  SE.Native.cpp  SE.Native.h  Vector2.cpp  Vector2.h  cpp.hint
SE.Native/Particles/: NativeAlphaModule.cpp  NativeAlphaModule.h  NativeModule.cpp  NativeModule.h  NativeSubmodule.cpp  NativeSubmodule.h  Particle.cpp  Particle.h  ParticleMath.cpp  ParticleMath.h
SE.Native/Utility/: Random.cpp  Vector2.h  Vector4.cpp  Vector4.h
SE.Native/src/: SE.Native.cpp  SE.Native.h  Utility.h
SE.Native/src/Particles/: NativeAlphaModule.cpp  NativeAlphaModule.h  NativeColorModule.cpp  NativeColorModule.h  NativeHueModule.cpp  NativeHueModule.h  NativeLightmessModule.cpp  NativeLightnessModule.h  NativeModule.cpp  NativeModule.h  NativeSaturationModule.cpp  NativeSaturationModule.h  NativeScaleModule.cpp  NativeScaleModule.h  NativeSpeedModule.cpp  NativeSpeedModule.h  NativeSpriteRotationModule.h  NativeSpriteRotationSubmodule.cpp  NativeSubmodule.cpp  NativeSubmodule.h  NativeTextureAnimationModule.cpp  NativeTextureAnimationModule.h  Particle.cpp  Particle.h  ParticleMath.cpp  ParticleMath.h
SE.Native/src/Utility/: Curve.cpp  Curve.h  Int4.cpp  Int4.h  MathUtil.h  Random.cpp  Random.h  Vector2.cpp  Vector2.h  Vector4.cpp  Vector4.h  Vectors.cpp  Vectors.h
SE.Net/: SE.Net.csproj  SE.Net.sln
SE.Net/Core/: Network.cs  NetworkRPC.cs  NetworkRPCManager.cs
SE.Particles.Native/: SE.Particles.Native.csproj  SE.Particles.Native.sln
SE.Serializer.Ini/: SE.Serializer.Ini.csproj  SE.Serializer.Ini.sln
SE.Serializer.Ini/Core/: IniSerializer.cs
SE.Serializer/SE.Serializer/: SE.Serializer.csproj  SE.Serializer.sln
SE.Serializer/SE.Serializer.Tests/: BasicTests.cs  ComplexTests.cs  SE.Serializer.Tests.csproj  SE.Serializer.Tests.sln  TestHelper.cs
SEDocumentation/: docfx.json
SENet/: SENet.csproj  SENet.sln
SENet/Core/: Network.cs
SEParticles/: AreaModule.cs  Emitter.cs  EmitterConfig.cs  EmitterSet.cs  EmitterShape.cs  IAdditionalData.cs  IEmitterShape.cs  IParticleProcessor.cs  IShape.cs  LICENSE  Particle.cs  ParticleEngine.cs  ParticleMath.cs  ParticleModule.cs  SEParticles.Portable.csproj  SEParticles.Portable.sln  SEParticles.csproj  SEParticles.sln
SEUtility/: SEUtility.csproj  SEUtility.sln
_SHARED/: Aether.Physics2D.Diagnostics.NETCORE.MG.deps.json  Aether.Physics2D.NETSTANDARD.MG.deps.json  DeeZInput.deps.json  FastMember.deps.json  MonoGame.Framework.deps.json  MonoGame.Framework.xml  MonoGame.Penumbra.xml  Open.Nat.deps.json  README.md
(+508 files in other folders)
